# shankh-shell

./: .gitignore  CMakeLists.txt  README.md  shell  test.sh
src/: main.cpp  shell.cpp  shell.h
src/aliases/: alias_manager.cpp  alias_manager.h
src/builtins/: alias.cpp  alias.h  bg.cpp  bg.h  builtin_registry.cpp  builtin_registry.h  cd.cpp  cd.h  echo.cpp  echo.h  env.cpp  env.h  export.cpp  export.h  fg.cpp  fg.h  history.cpp  history.h  jobs.cpp  jobs.h  kill.cpp  kill.h  pwd.cpp  pwd.h  read.cpp  read.h  source.cpp  source.h  type.cpp  type.h  unalias.cpp  unalias.h  unset.cpp  unset.h
src/completion/: completion.cpp  completion.h  completion_builtin.cpp  completion_builtin.h
src/executor/: external_executor.cpp  external_executor.h  pipeline_executor.cpp  pipeline_executor.h  redirection.cpp  redirection.h
src/jobs/: job_manager.cpp  job_manager.h
src/parser/: parser.cpp  parser.h
src/utils/: path_utils.cpp  path_utils.h
src/variables/: variable_manager.cpp  variable_manager.h
